--- a/public/chat.html
+++ b/public/chat.html
@@ -9,7 +9,7 @@
       integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk="
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="index.css" />
     <title>ChatCord App</title>
   </head>
   <body>
@@ -40,7 +40,7 @@
         </form>
       </div>
     </div>
-    
+    <script src="/socket.io/socket.io.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
