--- a/public/chat.html
+++ b/public/chat.html
@@ -10,12 +10,12 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="index.css" />
-    <title>ChatCord App</title>
+    <title>TempCodingServers-(TCS)</title>
   </head>
   <body>
     <div class="chat-container">
       <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> ChatCord</h1>
+        <h1><i class="fas fa-smile"></i> TempCodingServers-(TCS)</h1>
         <a id="leave-btn" class="btn">Leave Room</a>
       </header>
       <main class="chat-main">
@@ -25,7 +25,13 @@
           <h3><i class="fas fa-users"></i> Users</h3>
           <ul id="users"></ul>
         </div>
-        <div class="chat-messages"></div>
+        <div class="chat-messages">
+          <div class="message">
+            <p class="meta">Name<span>Time</span></p>
+            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel magni adipisci dolor ut laudantium, libero itaque ipsam tenetur fugiat nihil voluptatum, atque velit sapiente quos eaque similique et in ipsa.
+            </p>
+          </div>
+        </div>
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
