--- a/public/chat.html
+++ b/public/chat.html
@@ -26,12 +26,11 @@
           <ul id="users"></ul>
         </div>
         <div class="chat-messages">
-          <div class="message">
+          <!-- <div class="message">
             <p class="meta">Name<span>Time</span></p>
-            <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel magni adipisci dolor ut laudantium, libero itaque ipsam tenetur fugiat nihil voluptatum, atque velit sapiente quos eaque similique et in ipsa.
-            </p>
-          </div>
-        </div>
+              <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel magni adipisci dolor ut laudantium, libero itaque ipsam tenetur fugiat nihil voluptatum, atque velit sapiente quos eaque similique et in ipsa.
+            </p> 
+        </div> -->
       </main>
       <div class="chat-form-container">
         <form id="chat-form">
