--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
       <meta http-equiv="X-UA-Compatible" content="ie=edge" />
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css"
             integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
-      <link rel="stylesheet" href="index.css" />
-      <title>ChatCord App</title>
+      <link rel="stylesheet" href="index.css" >
+      <title>TempCodingServers-(TCS) App</title>
 </head>
 
 <body>
@@ -19,7 +19,7 @@
             <main class="join-main">
                   <form action="chat.html">
                         <div class="form-control">
-                              <label for="username">Username</label>
+                              <label for="username"><span class="U">U</span>sername</label>
                               <input type="text" name="username" id="username" placeholder="Enter username..."
                                     required />
                         </div>
