--- a/public/index.html
+++ b/public/index.html
@@ -44,10 +44,13 @@
                   <div id="about-site-divs">
                         <div class="about-site">
                              <p class="text">
-                              A <a class="socket-link" href="https://socket.io/">socket.io</a> based Chat Application, which doesn't stores your chats in any manner.
+                              A <a class="socket-link" href="https://socket.io/" target="_blank">socket.io</a> based Chat Application, which doesn't stores your chats in any manner.
                               Can be used to communicate globally. 
                              </p>
                              <p>Join Any Provided Server, Communicate with other programmers out there.</p>
+                             <div class="owner">
+                              <p> Created By Aayush Kumar Bhat</p>
+                        </div>
                         </div>
                   </div>
             <div id="content-container">
@@ -62,6 +65,8 @@
                   </div>
             </div>
             </section>
+
+            
 </body>
 
 </html>
