--- a/public/chat.html
+++ b/public/chat.html
@@ -13,36 +13,38 @@
     <title>TempCodingServers-(TCS)</title>
   </head>
   <body>
-    <div class="chat-container">
-      <header class="chat-header">
-        <h1><i class="fas fa-smile"></i> TempCodingServers-(TCS)</h1>
-        <a id="leave-btn" class="btn">Leave Room</a>
-      </header>
-      <main class="chat-main">
-        <div class="chat-sidebar">
-          <h3><i class="fas fa-comments"></i> Room Name:</h3>
-          <h2 id="room-name"></h2>
-          <h3><i class="fas fa-users"></i> Users</h3>
-          <ul id="users"></ul>
+    <div class="main-chat-container">
+      <div class="chat-container">
+        <header class="chat-header">
+          <h1><i class="fas fa-smile"></i> TempCodingServers-(TCS)</h1>
+          <a id="leave-btn" class="btn">Leave Room</a>
+        </header>
+        <main class="chat-main">
+          <div class="chat-sidebar">
+            <h3><i class="fas fa-comments"></i> Room Name:</h3>
+            <h2 id="room-name"></h2>
+            <h3><i class="fas fa-users"></i> Users</h3>
+            <ul id="users"></ul>
+          </div>
+          <div class="chat-messages">
+            <!-- <div class="message">
+              <p class="meta">Name<span>Time</span></p>
+                <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel magni adipisci dolor ut laudantium, libero itaque ipsam tenetur fugiat nihil voluptatum, atque velit sapiente quos eaque similique et in ipsa.
+              </p> 
+          </div> -->
+        </main>
+        <div class="chat-form-container">
+          <form id="chat-form">
+            <input
+              id="msg"
+              type="text"
+              placeholder="Enter Message"
+              required
+              autocomplete="off"
+            />
+            <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
+          </form>
         </div>
-        <div class="chat-messages">
-          <!-- <div class="message">
-            <p class="meta">Name<span>Time</span></p>
-              <p class="text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel magni adipisci dolor ut laudantium, libero itaque ipsam tenetur fugiat nihil voluptatum, atque velit sapiente quos eaque similique et in ipsa.
-            </p> 
-        </div> -->
-      </main>
-      <div class="chat-form-container">
-        <form id="chat-form">
-          <input
-            id="msg"
-            type="text"
-            placeholder="Enter Message"
-            required
-            autocomplete="off"
-          />
-          <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
-        </form>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.10.5/qs.min.js" integrity="sha512-JduLFfiB5t9F2dYayaCCWObe/SeciiMhX2MHAKGvQ22crUA/Sb1l4elG5A7r7Bu1tP2rs1cU5lR1Irx/govVdg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
